--- a/src/app/app.html
+++ b/src/app/app.html
@@ -32,7 +32,7 @@
           <a class="nav-link" routerLink="employeeapp"  >employeeapp</a>
         </li>
           <li class="nav-item" >
-          <a class="nav-link" routerLink="reactive-form"  >reactive-form</a>
+          <a class="nav-link" routerLink="employee-list"  >reactive-form</a>
         </li>
       </ul>
       <form class="d-flex">
