--- a/src/app/components/vendor-master/vendor-master.html
+++ b/src/app/components/vendor-master/vendor-master.html
@@ -56,7 +56,7 @@
                     </div>--{{newVendorObj.vendorId}}
                     <div class="row pt-3">
                         <div class="col-4 text-center">
-                            <button class="btn btn-secondary">Reset</button>
+                            <button class="btn btn-secondary" (click)="onReset()">Reset</button>
                         </div>
                         <div class="col-8 text-center">
                             @if (newVendorObj.vendorId ==0) {
