--- a/src/app/components/vendor-master/vendor-master.html
+++ b/src/app/components/vendor-master/vendor-master.html
@@ -5,7 +5,16 @@
                 List
             </div>
             <div class="card-body">
-                <table class="table table-bordered">
+                <div class="content" style="width: 100%; height: 100%;">
+                    <ag-grid-angular class="ag-theme-quartz" style="width: 100%; height: 500px;"
+                       [paginationPageSizeSelector]="[10,20,50,100]" [pagination]="true" [rowData]="vendorList()" 
+                       [columnDefs]="colDefs" [defaultColDef]="defaultColDef"
+                        [rowSelection]="rowSelection"
+                        />
+                </div>
+
+
+                <!-- <table class="table table-bordered">
                     <thead>
                         <tr>
                             <th>Sr No</th>
@@ -29,7 +38,7 @@
                         </tr>
                         }
                     </tbody>
-                </table>
+                </table> -->
             </div>
         </div>
     </div>
@@ -37,21 +46,24 @@
         <div class="card">
             <div class="card-header bg-warning">
                 {{newVendorObj.vendorId ==0 ? 'New Client Form':'Update Client'}}
+                --{{editRecord().vendorName}}
             </div>
             <div class="card-body">
-                <form  > 
+                <form>
                     <div class="row">
                         <div class="col-12">
                             <label for="">Name</label>
-                            <input type="text" [(ngModel)]="newVendorObj.vendorName" name="vendorName" class="form-control">
+                            <input type="text" [(ngModel)]="newVendorObj.vendorName" name="vendorName"
+                                class="form-control">
                         </div>
                         <div class="col-6">
                             <label for="">Contact No</label>
-                            <input type="text" [(ngModel)]="newVendorObj.contactNo" name="contactNo" class="form-control">
+                            <input type="text" [(ngModel)]="newVendorObj.contactNo" name="contactNo"
+                                class="form-control">
                         </div>
                         <div class="col-6">
                             <label for="">Email</label>
-                            <input type="text" [(ngModel)]="newVendorObj.emailId" name="emailId"  class="form-control">
+                            <input type="text" [(ngModel)]="newVendorObj.emailId" name="emailId" class="form-control">
                         </div>
                     </div>--{{newVendorObj.vendorId}}
                     <div class="row pt-3">
@@ -60,10 +72,10 @@
                         </div>
                         <div class="col-8 text-center">
                             @if (newVendorObj.vendorId ==0) {
-                                 <button class="btn btn-success" (click)="saveNewVendor()">Save Vendor</button>
+                            <button class="btn btn-success" (click)="saveNewVendor()">Save Vendor</button>
                             } @else {
-                                 <button class="btn btn-warning" (click)="updateVendor()">Update Vendor</button>
-                            } 
+                            <button class="btn btn-warning" (click)="updateVendor()">Update Vendor</button>
+                            }
                         </div>
                     </div>
                 </form>
@@ -71,5 +83,3 @@
         </div>
     </div>
 </div>
-
- 
